--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ body {
     justify-content: center;
     overflow-x: hidden;
     flex-direction: column;
-    background-color: #ffffff;
-    background: #fec52b;
+    background: radial-gradient(#5d0053, #0f0037);
 
 }
 
@@ -27,7 +26,7 @@ body {
     background-color: white;
     border: solid black 0.5px;
     color: black;
-    border-radius: 5px;
+    border-radius: 3px;
     width: 100%;
     height: 55%;
     outline: none;
@@ -39,7 +38,7 @@ body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: black;
     color: white;
-    border: solid black 5px;
+    border: solid black 3px;
     width: 80px;
     border-radius: 5px;
     height: 60%;
@@ -55,4 +54,24 @@ body {
     box-shadow: inset 0px 0px 5px #c1c1c1;
 }
 
+.button-amarelo {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: black;
+    color:#344C8F;
+    border: solid black 3px;
+    width: 80px;
+    border-radius: 5px;
+    height: 60%;
+    outline: none;
+    font-size: 15px;
+    font-weight:500;
+    cursor: pointer;
+}
 
+.button-amarelo:active{
+    background: rgba(0, 0, 0, 0.568);
+    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+    -moz-box-shadow: inset 0px 0px 5px #d32626;
+    box-shadow: inset 0px 0px 5px #c1c1c1;
+
+}
